# cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: cd-scaffold-cli.yml  contract-release.yml  release.yml  rust.yml  tests.yml  website-release.yml  website.yml
contracts/registry-tansu-manager/: Cargo.toml  e2e-fast-tansu-testnet.sh  e2e-real-tansu-testnet.sh  e2e-testnet.sh
contracts/registry-tansu-manager/src/: lib.rs  test.rs
contracts/test/registry-stub/: Cargo.toml
contracts/test/registry-stub/src/: lib.rs
contracts/test/tansu-stub/: Cargo.toml
contracts/test/tansu-stub/src/: lib.rs
crates/stellar-build/: CHANGELOG.md  Cargo.toml
crates/stellar-registry-build/: Cargo.toml
crates/stellar-registry-cli/: Cargo.toml
crates/stellar-scaffold-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/stellar-scaffold-cli/src/commands/: clean.rs  init.rs  mod.rs  setup.rs  upgrade.rs  version.rs
crates/stellar-scaffold-cli/src/commands/generate/contract/: mod.rs
crates/stellar-scaffold-cli/src/commands/init/: instantiate.rs  mod.rs
crates/stellar-scaffold-cli/src/commands/watch/: mod.rs
crates/stellar-scaffold-cli/tests/: unit.rs
crates/stellar-scaffold-cli/tests/it/build_clients/: accounts.rs  contracts.rs
crates/stellar-scaffold-cli/tests/it/features/: clean.rs  watch.rs
crates/stellar-scaffold-ext-types/: CHANGELOG.md  Cargo.toml
crates/stellar-scaffold-macro/: CHANGELOG.md  Cargo.toml
crates/stellar-scaffold-reporter/: CHANGELOG.md  Cargo.toml
crates/stellar-scaffold-test/fixtures/contracts/hello_v1/: Cargo.toml
crates/stellar-scaffold-test/fixtures/contracts/hello_v1/src/: lib.rs
crates/stellar-scaffold-test/fixtures/contracts/hello_v2/: Cargo.toml
crates/stellar-scaffold-test/fixtures/contracts/hello_v2/src/: lib.rs
crates/stellar-scaffold-test/fixtures/soroban-init-boilerplate/: .gitignore  Cargo.toml  README.md  initialize.js  package-lock.json  package.json  tsconfig.json
crates/stellar-scaffold-test/fixtures/soroban-init-boilerplate/contracts/token/src/: contract.rs
crates/stellar-scaffold-test/fixtures/soroban-init-boilerplate/src/pages/: index.astro
docs/site/: docusaurus.config.ts  package-lock.json  package.json
docs/site/docs/: cli.md  extensions.md  quick-start.mdx  registry.md
docs/site/docs/tutorial/: 00-overview.md
docs/site/i18n/es/docusaurus-plugin-content-docs/current/: registry.md
docs/site/i18n/es/docusaurus-plugin-content-docs/current/tutorial/: 00-overview.md
npm/: README.md  package-lock.json  package.json
website/: package-lock.json
