[workspace]
resolver = "2"
default-members = ["crates/*"]
members = [
    "crates/*",
    "crates/stellar-scaffold-test/fixtures/contracts/*",
]

[workspace.package]
repository = "https://github.com/stellar-scaffold/cli"

[workspace.dependencies]
stellar-scaffold-macro = { path = "crates/stellar-scaffold-macro" }
stellar-scaffold-test = { path = "crates/stellar-scaffold-test" }
stellar-scaffold-ext-types = { path = "crates/stellar-scaffold-ext-types", version = "0.0.2" }

stellar-cli = { version = "27.0.0", package = "soroban-cli", default-features = false }
soroban-rpc = { package = "stellar-rpc-client", version = "27.0.0" }
soroban-spec-tools = "27.0.0"

soroban-sdk = "27.0.0-rc.1"
stellar-xdr = "=27.0.0"
stellar-strkey = "0.0.16"

cargo_metadata = "0.18.1"
thiserror = "2.0.17"
sha2 = "0.10.9"

clap = "4.6.1"
reqwest = { version = "0.12.9", default-features = false }

[profile.contracts]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true

[workspace.lints.clippy]
result_large_err = "allow"
