[package]
name = "registry-tansu-manager"
description = "Tansu-DAO-gated manager for the stellar registry."
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false
repository = "https://github.com/theahaco/scaffold-stellar/tree/main/contracts/registry-tansu-manager"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-sdk-tools = "0.1.2"
stellar-registry = { workspace = true }
# Build-order signal so `stellar scaffold build` produces `tansu_stub.wasm`
# before this crate compiles `import_contract_client!(tansu_stub)`. The stub
# is the single source of truth for the Tansu proposal types — pattern mirrors
# `contracts/registry`'s dev-dep on `hello_world`.
tansu-stub = { path = "../test/tansu-stub" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-sdk-tools = { version = "0.1.2", features = ["testutils"] }
registry-stub = { path = "../test/registry-stub" }

[package.metadata.stellar]
cargo_inherit = true
