[package]
name = "stellar-scaffold-macro"
version = "0.8.14"
edition = "2024"
description = "Macros needed by stellar-scaffold"
license = "Apache-2.0"
repository = "https://github.com/stellar-scaffold/cli/tree/main/crates/stellar-scaffold-macro"

[lib]
proc-macro = true

[dependencies]
stellar-build = { path = "../stellar-build", version = "0.0.6" }
proc-macro2 = "1.0"
syn = { version = "2", features = ["full"] }
quote = "1.0"
stellar-strkey = { workspace = true }
regex = "1.12.3"
stellar-xdr = { workspace = true }
sha2 = "0.10.9"
